--- a/MakingMore.Rmd
+++ b/MakingMore.Rmd
@@ -3,7 +3,7 @@ title: "Making more of oneself"
 subtitle: "Life as chemical reactions"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output: tint::tintPdf
+output: tint::tintHtml
 latexfonts:
   - package: newtxmath
     options: 
@@ -47,7 +47,7 @@ When making something new,, one needs supplies. For a house one would need lumbe
 You may recall from prior classes, some vague sense of "nutrition", or a text^[E.g., such as this wonderfully straightforward online book, [The Cell: A Molecular Approach](https://www.ncbi.nlm.nih.gov/books/NBK9879/).] a few bits. We could start with water, of course, which makes up $\geq$ 70% of a cell's mass, and continue with:
 
 * Carbohydrates, from simple sugars, such as glucose, which is a primary energy store in cells, to polysaccharides, which both serve as the storage form of those simple sugars and form structural components of the cells. They are formed from a few (e.g., glucose has two, hexose has six) to many hundreds of  CH~2~O molecules strung together, occasionally with other groups for decoration^[Or function, I'm sure...I'm an ecologist, not a molecular biologist!].
-* Lipids, which are predominant in cell membranes and vacuoles, store energy, and function in signaling^[Think steroid hormones, but also within-cell signally molecules]. These are usually a string of CH~2~ (hydrocarbon) molecules] strung together in chains, sets of chains, or groups of rings. They often have fancy terminal ends (e.g., a carboxyl group of COO^-^) or heads (e.g., the phosphate groups, PO~4~ in phospholipids that change their solubility in water, structure, capacity to interact with other molecules, and other things that influence their molecular biology.
+* Lipids, which are predominant in cell membranes and vacuoles, store energy, and function in signaling^[Think steroid hormones, but also within-cell signally molecules]. These are usually a string of CH~2~ (hydrocarbon) molecules strung together in chains, sets of chains, or groups of rings. They often have fancy terminal ends (e.g., a carboxyl group of COO^-^) or heads (e.g., the phosphate groups, PO~4~ in phospholipids that change their solubility in water, structure, capacity to interact with other molecules, and other things that influence their molecular biology.
 * Nucleic acids—both RNA and DNA—that, well, you know what they do^[Or do you? Did you remember that adenosine 5'-triphosphate (ATP) is also a nucleotide? OK, full disclosure: I'd forgotten, too!]. They are composed of purine and pyrimidine bases (one or two carbon rings with a couple of nitrogens in places of the carbons, plus more "decorations") attached to a sugar (ribose for RNA or 2'-deoxyribose for DNA). 
 * Amino acids form proteins, which are the most diverse category of molecule in the cell and also among the most important, servicing as structure, transport, and signally molecules, as well as catalyzing most every biochemical reaction. The amino acid backbone of the protein consist of a central Carbon atom bonded to a carboxyl group (COO^-^), an amino group (NH~3~), and a side chain that determines the molecule's function or capacity to interact with other molecules. 
 
@@ -64,11 +64,11 @@ knitr::include_graphics("chemicals_2x.png", dpi=200)
 
 Again, we could theoretically take our list of ingredients, count how many glucoses and uracils and so on we needed to make a cell, and come up with a shopping list of sorts. We could even "build from scratch" by figuring out how many hydrogens we needed in all of the sugars and lipids and whatnot to get a more basic list of the numbers of each types of atom^[Of course cells often do not work with actual atoms—if they obtain an amino acid they can use that amino acid as is, or at least convert it to one that is needed. But thinking of atoms is a reasonable way to proceed at a course level.] that are required to build a new cell. After all, this is chemistry and at some level it is all interacting atoms. But we do not actually build our list of ingredients this way. For one, it would be tedious. And perhaps impossible^[I've been unable to find anyone that has actually done this. Let me know if you hear of such a study!]. 
 
-If we are willing to build a list of atoms instead of molecules, we can simply^[Ha! Beware anyone that says something is "simple." That "simple" project might be a lifetime's work, or more!] use <mumble, mumble> to measure the number of each element in a, say, gram of cells and get our materials list. For instance, I once used an atomic absorption spectrometer in science camp^[Yes, I was that kind of nerd. Although I honestly spent most of my time water skiing.] to measure the elemental ratios of _Daphnia_ spp. collected from the lake, which makes me think I'm not wholly out on a limb here. Anyway, people have done something like this and come up with the list of atoms that make up the vast, vast majority^[Over 98% of us, and even more of bacteria!] of living tissues. The list is: C, H, N, O, P, S^[Pronounced CHNOPS. Also, it is worth noting that this ordering is not by mass or importance, but simply to get a lovely, pronounceable acronym. In fact [oxygen is the most abundant atom](https://en.wikipedia.org/wiki/CHON) in plants and animals.]].
+If we are willing to build a list of atoms instead of molecules, we can simply^[Ha! Beware anyone that says something is "simple." That "simple" project might be a lifetime's work, or more!] use <mumble, mumble> to measure the number of each element in a, say, gram of cells and get our materials list. For instance, I once used an atomic absorption spectrometer in science camp^[Yes, I was that kind of nerd. Although I honestly spent most of my time water skiing.] to measure the elemental ratios of _Daphnia_ spp. collected from the lake, which makes me think I'm not wholly out on a limb here. Anyway, people have done something like this and come up with the list of atoms that make up the vast, vast majority^[Over 98% of us, and even more of bacteria!] of living tissues. The list is: C, H, N, O, P, S^[Pronounced CHNOPS. Also, it is worth noting that this ordering is not by mass or importance, but simply to get a lovely, pronounceable acronym. In fact [oxygen is the most abundant atom](https://en.wikipedia.org/wiki/CHON) in plants and animals.].
 
  This should make a bit of sense. Most of our list of molecules above involved one or a few hundred carbon atoms, many with hydrogens and oxygens attached. Plus there is all of the water. The phosphorus is not surprising if you simply think of ATP, but it is also important in nucleic acids, phospholipids, and more. The Sulfur is in the amino acids methionine and cysteine, but is also very common as a key part of enzymes^[And if you're into extremophiles, sulfur can be the basis of metabolism, such as around back smoker vents at cracks in the ocean floor.]. 
 
-I also want to add that there is a quite long list of other elements that are essential in small amounts to all life^[E.g., Na, Mg, K, Ca, Cl, Mn, Fe, Cu, Zi, I, K, Fe. Google them to find out their various roles. They are quite interesting!], or to particular types of life (e.g., Boron for plants, sodium and chlorine for animals^[Think of nerve impulses.], or  silicon for diatoms). These are often called micronutrients because they are required in sometimes vanishingly small amounts. And again, remember that it is not necessarily the element that is important, but the molecule built from the elements. Vitamin C, for instance, is simply C~6~H~8~O~6~---all of the stuff we normally take in with CHNOPS---but we^[And guinea pigs for reasons I do not understand.] are unable to turn these elements we have in abundance into L-ascorbic acid. We must obtain it in its ready-to-use form. Our shortcut of simply counting atoms does not work universally, so take the next section with a grain of NaCl. 
+I also want to add that there is a quite long list of other elements that are essential in small amounts to all life^[E.g., Na, Mg, K, Ca, Cl, Mn, Fe, Cu, Zi, I, K, Fe. Google them to find out their various roles. They are quite interesting!], or to particular types of life (e.g., boron for plants, sodium and chlorine for animals^[Think of nerve impulses.], or  silicon for diatoms). These are often called micronutrients because they are required in sometimes vanishingly small amounts. And again, remember that it is not necessarily the element that is important, but the molecule built from the elements. Vitamin C, for instance, is simply C~6~H~8~O~6~---all of the stuff we normally take in with CHNOPS---but we^[And guinea pigs for reasons I do not understand.] are unable to turn these elements we have in abundance into L-ascorbic acid. We must obtain it in its ready-to-use form. Our shortcut of simply counting atoms does not work universally, so take the next section with a grain of NaCl. 
 
 
 ```{r, fig.margin=FALSE, fig.cap="https://xkcd.com/1490/."}
@@ -79,14 +79,14 @@ knitr::include_graphics("atoms_2x.png", dpi=200)
 
 # Stoichiometry becomes useful
 
-If we are willing to think of cells or larger organisms as sacks of chemical reactions---and _I_ am, at least^[Endless chains of chemical reactions where the product of one is a reactant to another. You have likely seen the citric acid or Krebs cycle, photosynthesis, protein synthesis, or any number of other reactions involved in life. That stuff---well, probably not photosynthesis!---is happening inside of us right now, as I write and you read.]---then our list of ingredients is something akin to the reactants on the left-hand side of a chemical reaction. (The cell or organism is, in a sense, the product on the right-hand side). What's more, we know the ratio of the different sorts of atoms required to make the cell or organism! This, my friend, is stoichiometry!^[Please don't roll your eyes like that! In fact, you should go back to your chemistry instructor and tell them that they were, in fact, correct: stoichiometry did prove useful!] 
+If we are willing to think of cells or larger organisms as sacks of chemical reactions^[Endless chains of chemical reactions where the product of one is a reactant to another. You have likely seen the citric acid or Krebs cycle, photosynthesis, protein synthesis, or any number of other reactions involved in life. That stuff---well, probably not photosynthesis!---is happening inside of us right now, as I write and you read.]---_I_ am---then our list of ingredients is something akin to the reactants on the left-hand side of a chemical reaction. (The cell or organism is, in a sense, the product on the right-hand side). What's more, we know the ratio of the different sorts of atoms required to make the cell or organism! This, my friend, is stoichiometry!^[Please don't roll your eyes like that! In fact, you should go back to your chemistry instructor and tell them that they were, in fact, correct: stoichiometry did prove useful!] 
 
 What can we do with this observation? Well, if we view life as (a series of highly complex) chemical reactions that occur within a lipid membrane, then all of the things you learned about chemistry apply to life, at least a this level of thinking. Perhaps most fundamentally we can see that if some reactant is limiting, it will slow or even stop a reaction from proceeding. Moreover, it is not the absolute amount of some reactants that matters, but the _ratio_ of the reactants that is important: 12 oxygens per carbon, for instance. 
 
-We can go one step further: it turns out that the availability of elemental nutrients and their ratio can strongly influence which species grow best or are dominant in an area. At some level this is trivial; plants that require lots of N do not grow in places that do not have sufficient N whereas those that require less N or can create their own^[With the help of rhizobial bacteria, for instance.] can grow there. But even more nuanced relationships hold. Some _Daphnia_ spp. are larger and slower growing than the fast-growing cyclopoid copepods^[Both small, aquatic crustaceans.]. While both feed directly on phytoplankton and have essentially the same structures and biochemistry, the stoichiometric ratios of elements they require are different. The copepods produce more ATP and more nucleic acids to fuel their rapid growth, which means they require more P for each N, whereas the daphnia are more protein-rich and thus require fewer P for each N. Thus if you fertilize the phytoplankton with P you end up favoring copepods over daphnia and if you you fertilize with N you favor daphnia over copepods. Elemental ratios helps determine who lives where (and when)!^[Please note that I am reconstructing this from my memory of the work from Jim Elser's lab at Arizona State University when I was a graduate student in the department, which was, as I write, quite some time ago! If you are interested, please look it up! It's cool work and I may have gotten some key details wrong. Plus, I know the work has advanced from there!] 
+We can go one step further: it turns out that the availability of elemental nutrients and their ratio can strongly influence which species grow best or are dominant in an area. At some level this is trivial; plants that require lots of N do not grow in places that do not have sufficient N whereas those that require less N or can create their own^[With the help of rhizobial bacteria, for instance.] can grow there. But even more nuanced relationships hold. Some _Daphnia_ spp. are larger and slower growing than the fast-growing cyclopoid copepods^[Both small, aquatic crustaceans.]. While both feed directly on phytoplankton and have essentially the same structures and biochemistry, the stoichiometric ratios of elements they require are different. The copepods produce and use a lot of ATP and nucleic acids to fuel their rapid growth, which means they require more P for each N, compared with daphnia, which tend to be more protein-rich and thus require fewer P for each N. Thus if you fertilize the water growing phytoplankton with P you end up favoring copepods over daphnia and if you you fertilize with N you favor daphnia over copepods. Elemental ratios helps determine who lives where (and when)!^[Please note that I am largely reconstructing this from my memory of the work from Jim Elser's lab at Arizona State University when I was a graduate student in the department, which was, as I write, quite some time ago! If you are interested, please look it up! It's cool work and I may have gotten some key details wrong. Plus, I know the work has advanced from there!] 
 
 # What is limiting?
 
-One other lesson that comes from thinking of life as chemical reactions is the realization that _something_ is always limiting. Always. If N is not limiting, then perhaps P is. If you have enough N and P, perhaps it is manganese or iron or even molybdenum. There is always _something_ that is limiting the rate of the chemical reactions that are life. A consequence is that supplementing with a rate-limiting element or chemical only works until it is no longer limiting. Next time you go to the garden center look at the fertilizers they sell. Most include a particular ratio of N, P, and K (and sometimes a few other things). Now you know why.
+One other lesson that comes from thinking of life as chemical reactions is the realization that _something_ is always limiting. Always. If N is not limiting, then perhaps P is. If you have enough N and P, perhaps it is manganese or iron or even molybdenum that limits growth. There is _always_ _something_ that limits the rate of the chemical reactions that support life. A consequence is that supplemention with a rate-limiting element or chemical only works up to the point that it is no longer limiting. Next time you go to the garden center look at the fertilizers they sell. Most include a particular ratio of N, P, and K (and sometimes a few other things). Now you know why.
 
-Another consequence is that the waste of an organism can tell you something about what it does and does not need. Aphids, for instance, feed on the phloem of their host plant. This food source is largely photosynthates, like sucrose. That is, they are eating a high sugar diet. Indeed, they consume so much sugar that they are no longer energy limited, but by amino acids. Thus they excrete sugar water or "honeydew" that is often fed on by ants^[Actually, the reality is more complex and neater. The sugars in the sap they feed on lead to high osmotic pressure in the aphids. They reduce this or osmoregulate by consuming the sugars and converting the sucrose to larger oligosaccharides that they excrete in the honey dew. So this is a more active process than a passive one I implied. Plus the honey dew can attract ants that provide protection for the aphids, so bonus! And lastly, the aphids rely on bacterial endosymbionts to produce most of the amino acids they need; and they feed them sugars. See [wikipedia](https://en.wikipedia.org/wiki/Aphid#Diet) for a nice sketch of what's happening.]. Similarly, animals that primarily eat plants, which are mostly carbon, leave waste that is mostly carbon after having taken up the materials they need to build more of themselves. Predators, on the other hand, often encounter so much nitrogen in their diets they poop out very nitrogen-rich feces, but much less carbon-poor. Building more of oneself is so amazing, right?
+Another consequence is that the waste of an organism can tell you something about what it does and does not need. Aphids, for instance, feed on the phloem of their host plant. This food source is largely photosynthates, like sucrose. That is, they are eating a high sugar diet. Indeed, they consume so much sugar that they are no longer limited by energy, but rather by amino acids. Thus they excrete sugar water or "honeydew," which is often fed on by ants^[Actually, the reality is more complex and neater. The sugars in the sap they feed on lead to high osmotic pressure in the aphids. They reduce this or osmoregulate by consuming the sugars and converting the sucrose to larger oligosaccharides that they excrete in the honey dew. So this is a more active process than a passive one I implied. Plus the honey dew can attract ants that provide protection for the aphids, so bonus! And lastly, the aphids rely on bacterial endosymbionts to produce most of the amino acids they need; and they feed them sugars. See [wikipedia](https://en.wikipedia.org/wiki/Aphid#Diet) for a nice sketch of what's happening.]. Similarly, animals that primarily eat plants, which are mostly carbon, leave waste that is mostly carbon after having taken up the materials they need to build more of themselves. Predators, on the other hand, often encounter so much nitrogen in their diets they poop out very nitrogen-rich feces, with relatively little carbon in it. Building more of oneself is so amazing, right?
