--- a/BirthDeath_r.qmd
+++ b/BirthDeath_r.qmd
@@ -2,24 +2,18 @@
 title: "Population growth from birth and death"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output: tint::tintPdf
-latexfonts:
-  - package: newtxmath
-    options: 
-      - cmintegrals
-      - cmbraces
-  - package: ebgaramond-maths
+format:
+  pdf: default
+  html: 
+    self-contained: true
+    grid:
+      margin-width: 350px
+format-links: false
+execute:
+  echo: false
+reference-location: margin
 ---
 
-```{r setup, include=FALSE}
-library(tufte)
-# invalidate cache when the tufte version changes
-knitr::opts_chunk$set(tidy = FALSE, 
-                      message = FALSE, 
-                      warning = FALSE,
-                      echo = FALSE)
-options(htmltools.dir.version = FALSE)
-```
 
 ```{r, include=FALSE}
 library(tidyverse)
@@ -31,7 +25,7 @@ theme_set(theme_minimal())
 We have been talking a lot about population growth and rates of replication, but I am guessing it has seemed a little...abstract to many. After all, we keep making these silly assumptions like _everyone doubles themselves each time step_ or _everything is happening all the time all at once_. But of course our biological intuition does not match these assumptions. Most animals, for instance, are born (or hatch), grow, eventually become reproductive, and then reproduce over one or more bouts. They may also be more or less likely to die during different periods of their lives. _None_ of that seems constant or to translate simply to $\lambda$ or $r$. 
 
 # Using averages to get around the biology
-First, we should note that when we are discussion the population multiplier ($\lambda$) or intrinsic growth rate ($r$), we are really thinking of the average across the entire population, including those in different stages or ages^[And depending on the study, sexes. Often we just count females and ignore males when thinking about demographics. Males are not exactly rate limiting, after all; they just provide sperm.]. So, for instance, for humans we might simply figure out how much the population grows from one year to the next and then back-calculate what $r$ must be from $N(\text{Year 2}) = N(\text{Year 1})\times e^{r\times \text{1 year}}$), which is a way to average the _per capita_ growth rate over all of the people, young and old.
+First, we should note that when we are discussion the population multiplier, $\lambda$, or intrinsic growth rate, $r$, we are really thinking of the average across the entire population, including those in different stages or ages^[And depending on the study, sexes. Often we just count females and ignore males when thinking about demographics. Males are not exactly rate limiting, after all; they just provide sperm.]. So, for instance, for humans we might simply figure out how much the population grows from one year to the next and then back-calculate what $r$ must be from $N(\text{Year 2}) = N(\text{Year 1}) \times e^{r\times \text{1 year} }$, which is a way to average the _per capita_ growth rate over all of the people, young and old.
 
 But still. There's all this important biology about how long animals live, when they become reproductive, how many offspring they have, and how all of this changes over time. Surely there is some way to work out $\lambda$ or $r$ from _that_ sort of information?
 
@@ -39,8 +33,10 @@ You, my friend, are in luck!
 
 # From life tables to $R_0$
 
-It is probably easiest to work with a simple example. Let me consider an idealized mouse (_Peromyscus_ spp.) in nature^[I tried to find information for the guinea pig, but relevant information was not easily accessible.]. First, let's consider their probability of surviving over time. A mouse might rarely live to see 2 years of age in nature (and up to 8 years in captivity---Nature is red in tooth and claw, and all that, huh?), but probably a more realistic range is 95% chance of surviving to 12 months. Their probability of survival might look like this:
+It is probably easiest to work with a simple example. Let me consider an idealized mouse (_Peromyscus_ spp.) in nature^[I tried to find information for the guinea pig, but relevant information was not easily accessible.]. First, let's consider their probability of surviving over time. A mouse might rarely live to see 2 years of age in nature (and up to 8 years in captivity---Nature is red in tooth and claw, and all that, huh?), but probably a more realistic range is 95% chance of surviving to 12 months. Their probability of survival might look like @tbl-xlx:
 ```{r}
+#| label: tbl-xlx
+#| tbl-cap: "Table of time steps, $x$, and survivorship, $l_x$, of a cohort of mice"
 df <- tibble(x = 0:12, 
              lx = round(exp(-0.25*0:12), 2))
 
@@ -51,25 +47,45 @@ knitr::kable(df, col.names = c("$x$", "$l_x$"))
 
 Here $x$ is the time step, in months^[Or whatever time step we're interested... perhaps weeks for _Daphnia_ or years for horses.], from birth ($x=0$) through one year ($x=12$ months). $l_x$ is the probability of surviving to that time^[Why $l_x$? Convention. I'm going to stick with conventions throughout so that if you ever want to look this stuff up you can.]
 
-For fun we can plot this probability of surviving over time (months) on linear and logarithmic scales. 
+For fun we can plot this probability of surviving over time (months) on linear (@fig-surv-lin) and logarithmic (@fig-surv-log) scales. 
 
-```{r, fig.margin=TRUE, fig.cap = "Average survivorship of imaginary mice over 12 months.", fig.show='hold'}
-
+```{r}
+#| label: fig-surv-lin
+#| fig-cap: "Average survivorship of imaginary mice over 12 months on a linear scale. Data in @tbl-xlx." 
+#| fig-alt: "A line showing how survivorship on the y-axis declines exponentially with age on the x-axis"
+#| column: margin
+#| message: false
 ggplot(df, aes(x, lx)) + 
   geom_point() + 
   geom_line() + 
   labs(x = "Months from birth", y = "Probability of surviving") + 
   scale_x_continuous(breaks = 0:6*2)
+```
 
-last_plot() + scale_y_log10(breaks = c(0.05, 0.1, 0.2, 0.5,1))
+
+
+```{r}
+#| label: fig-surv-log
+#| fig-cap: "Average survivorship of imaginary mice over 12 months on a logarithmic scale. Data in @tbl-xlx."
+#| fig-alt: "A line showing how survivorship on this logarithmic y-axis declines linearly with age on the x-axis"
+#| column: margin
+#| message: false
+ggplot(df, aes(x, lx)) + 
+  geom_point() + 
+  geom_line() + 
+  labs(x = "Months from birth", y = "Probability of surviving") + 
+  scale_x_continuous(breaks = 0:6*2) + 
+  scale_y_log10(breaks = c(0.05, 0.1, 0.2, 0.5,1))
 ```
 
 Notice that on a logarithmic scale, the decline in survival is constant. This is a hint that the probability of surviving from month to month is essentially the same---a constant rate---whether young or old. Indeed, I assumed a 75% chance of survival per month. (And this is a reminder that constant decline is very similar to constant increase _a la_ exponential growth models.)
 
 Second, we can add into our table the average reproductive success from individuals of each stage or age. Importantly, this is averaged across all of the individuals, whether they reproduce or not, and have large or small clutches^[Also, let's assume we are only tracking female survival and reproduction; the males can be safely ignored.]. Importantly---and perhaps obviously---this only accounts for individuals alive to actually reproduce. So we can think of it as the average clutch size of (live) females of age $x$.  We call this value age-specific "fecundity" and represent with the symbol $m_x$. 
 
-Mice can become reproductive within two months and then have a clutch of 1-3 (depending on size) every two months, so on average---accounting for the fact that some mice reproduce immediately at two months and others might wait until three months or four---we get something like this^[With nice fairly round numbers to keep things simple]:
+Mice can become reproductive within two months and then have a clutch of 1-3 (depending on size) every two months, so on average---accounting for the fact that some mice reproduce immediately at two months and others might wait until three months or four---we get something like @tbl-xlxmx ^[With nice fairly round numbers to keep things simple]:
 ```{r}
+#| label: tbl-xlxmx
+#| tbl-cap: "Table of time steps, $x$, survivorship, $l_x$, and now average fecundity, $m_x$, of a cohort of mice"
 df <- df %>% 
   mutate(mx = c(0,0,0,0.5,0.75,1,1.25,1.5,1.5,1.5,1.5,1.5,1.5))
 knitr::kable(df, col.names = c("$x$", "$l_x$", "$m_x$"))
@@ -79,13 +95,16 @@ Now here's the question: would a population of mice with these patterns of survi
 
 Initially this is a hard thing to answer. Sure, females that are 5+ months old produce a lot of babies, but relatively few mice actually survive to that age. Moreover, how do we merge these gains and losses in a coherent way to estimate the population growth rate? 
 
+
 A first step is to rephrase our question in a more tractable form: _What is the expected reproductive output of the average (female) mouse over her entire expected lifetime?_ We will call this value $R_0$. 
 
 If a female just replaces herself, on average ($R_0 = 1)$, then the population must be just replacing itself, yes? And if a female produces two offspring, on average ($R_0 = 2$), then the population must double in each generation, meaning it is growing (fast!). If instead an average female only generated 3/4 of an offspring, on average ($R_0 = 0.75$), over her entire lifespan then she not even replacing herself and the population would shrink (by 25% a generation). Let's see how this works. 
 
-The key to calculating the expected reproductive output of females of a given age (e.g., $x = 5$ months old) is to recognize that they _must have survived_ to that point (here, $l_5 =0.29$ for $x=5$) in order to produce a clutch of average size $m_x$ (here, $m_x = 1$ for $x=5$). We can thus figure out the expected reproduction of each stage as the product, $l_x \times m_x$ (here, $l_5m_5=0.29 \times 1 = 0.29$). Let's add this into our table:
+The key to calculating the expected reproductive output of females of a given age (e.g., $x = 5$ months old) is to recognize that they _must have survived_ to that point (here, $l_5 =0.29$ for $x=5$) in order to produce a clutch of average size $m_x$ (here, $m_x = 1$ for $x=5$). We can thus figure out the expected reproduction of each stage as the product, $l_x \times m_x$ (here, $l_5m_5=0.29 \times 1 = 0.29$). Let's add this into @tbl-xlxmx-lxmx:
 
 ```{r}
+#| label: tbl-xlxmx-lxmx
+#| tbl-cap: "Table of time steps, $x$, survivorship, $l_x$, average fecundity, $m_x$, , and now the product of survivorship and fecundity, $l_x m_x$, for a cohort of mice"
 df <- df %>% 
   mutate(lxmx = round(lx*mx, 3))
 knitr::kable(df, col.names = c("$x$", "$l_x$", "$m_x$", "$l_x m_x$"))
@@ -99,7 +118,13 @@ $$
 R_0 = \sum_{x=0}^{x=L} l_x \times m_x.
 $$
 
-```{r, fig.margin=TRUE, fig.cap = "Monthly and cumulative expected reproductive output from our example."}
+
+```{r}
+#| label: fig-repr
+#| fig-cap: "Monthly and cumulative expected reproductive output from our example. See @tbl-xlxmx-lxmx for data."
+#| fig-alt: "vertical bars showing the year amount of lx times mx with age along the x-axis and a line that shows the constantly cumulative sum of lx times mx with age"
+#| column: margin
+
 ggplot(df, aes(x=x, y = lxmx)) + 
   geom_bar(stat = "identity") + 
   geom_point(aes(y = cumsum(lxmx))) +
@@ -108,7 +133,7 @@ ggplot(df, aes(x=x, y = lxmx)) +
   ylab(expression(paste(l[x], m[x])))
 ```
 
-See the figure to the right showing the $l_x m_x$ values (bars) for each time step, $x$, as well as the cumulative sum of those values (line). Here, that sum is $R_0 = `r with(df, sum(lxmx))`$.
+See @fig-repr to the right showing the $l_x m_x$ values (bars) for each time step, $x$, as well as the cumulative sum of those values (line). Here, that sum is $R_0 = `r with(df, sum(lxmx))`$.
 
 So, should we expect our hypothetical mouse population to shrink, stay the same, or grow? You now have all of the information. What do you think?
 
