--- a/ProminanceOfTemp.qmd
+++ b/ProminanceOfTemp.qmd
@@ -2,28 +2,18 @@
 title: "The prominence of temperature in biology"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output: tint::tintPdf
-latexfonts:
-  - package: newtxmath
-    options: 
-      - cmintegrals
-      - cmbraces
-  - package: ebgaramond-maths
-header-includes:
-   - \usepackage{booktabs}
-   - \usepackage{cancel}
+format:
+  pdf: default
+  html: 
+    self-contained: true
+    grid:
+      margin-width: 350px
+format-links: false
+execute:
+  echo: false
+reference-location: margin
 ---
 
-```{r setup, include=FALSE}
-library(tufte)
-# invalidate cache when the tufte version changes
-knitr::opts_chunk$set(tidy = FALSE, 
-                      message = FALSE, 
-                      warning = FALSE,
-                      echo = FALSE,
-                      cache.extra = packageVersion('tufte'))
-options(htmltools.dir.version = FALSE)
-```
 
 ```{r, include=FALSE}
 library(tidyverse)
@@ -34,10 +24,17 @@ theme_set(theme_minimal())
 
 
 # Biology is temperature-dependent
-In addition to adding more of a limiting reactant, one way to increase the rate of a chemical reaction is to add heat. It makes chemicals bounce around faster and so come into contact more frequently^[Hmm...are chemical reactions a useful analogy for infected hosts interacting with and infecting susceptible hosts? Let's revisit this later!]. The added energy also speeds reactions by providing the activation energy required for endothermic and even exothermic reactions. All of which is to say, reactions go faster at warmer temperatures. What are the consequences? Let's consider two:
+In addition to adding more of a limiting reactant, one way to increase the rate of a chemical reaction is to add heat. It makes chemicals bounce around faster and so come into contact more frequently^[Hmm...are chemical reactions a useful analogy for infected hosts interacting with and infecting susceptible hosts? Let's revisit this later!]. The added energy also speeds reactions by providing the activation energy required for endothermic and even exothermic reactions. All of which is to say, reactions go faster at warmer temperatures. What are the consequences? Let's consider two.
 
 # Thermal optima
-```{r, fig.margin=TRUE, fig.alt = "Line graph showing the rate of an enzymatic reaction increases exponentially with increasing temperature."}
+
+Rates of chemical reactions increase _exponentially_ with temperature^[If you wonder why, look up the [Arrhenius equation](https://www.chemguide.co.uk/physical/basicrates/arrhenius.html)...yet another exponential model, but this one describes the "rate constant" of a chemical reaction.] (@fig-rate-enz). As a quick rule of thumb, rates of reaction tend to double with a $10^\circ$C increase in temperature. So the rate of reactions, even enzymatic reactions such as those involved in metabolism or muscle contractions or most any other biochemical process, tends to increase like the blue line on the graph to the right.
+
+```{r}
+#| label: fig-rate-enz
+#| column: margin
+#| fig-alt: "Line graph showing the rate of an enzymatic reaction increases exponentially with increasing temperature."
+
 r <- log(2)/10
 df <- tibble(Temperature = 10:50, 
              Reaction = exp(r*Temperature), 
@@ -52,9 +49,14 @@ ggplot(df, aes(Temperature, Reaction)) +
         axis.title.y.right = element_text(color = "red"))
 ```
 
-Rates of chemical reactions increase _exponentially_ with temperature^[If you wonder why, look up the [Arrhenius equation](https://www.chemguide.co.uk/physical/basicrates/arrhenius.html)...yet another exponential model, but this one describes the "rate constant" of a chemical reaction.]. As a quick rule of thumb, rates of reaction tend to double with a $10^\circ$C increase in temperature. So the rate of reactions, even enzymatic reactions such as those involved in metabolism or muscle contractions or most any other biochemical process, tends to increase like the blue line on the graph to the right.
+Your intuition is probably quietly screaming at you right now, saying, "yeah, but...!" And your intuition is right. This accelerating relationship between the rate of a reaction and temperature cannot go on forever. At some point, everything catches on fire and you get soot rather than a muscle contraction, right? Even before the fires start our reactions run into other temperature limits. Most biochemical reactions involve enzymes and enzymes eventually fall apart or "denature" at warmer temperatures. (The same can happen to some of the chemical reactants, too.) The pattern of enzymes denaturing as temperature increases is like [Hemmingway's statement about how you go bankrupt]([https://www.goodreads.com/quotes/102579-how-did-you-go-bankrupt-two-ways-gradually-then-suddenly]): "gradually, then suddenly." Let's add a line to the graph at the right showing the proportion of enzymes that are still active (i.e., have not denatured) as a function of temperature (@fig-rate-enzd). 
 
-```{r, fig.margin=TRUE, fig.alt = "Line graph showing, as in the previous graph, the rate of an enzymatic reaction increases exponentially with increasing temperature, plus a separate line showing how the proportion of enzymes that are active starts very high but then declines rapidly above a certain temperature."}
+
+```{r}
+#| label: fig-rate-enzd
+#| column: margin
+#| fig-alt: "Line graph describing how the proportion of active enzymes starts very high but then declines rapidly above a certain temperature."
+
 ggplot(df, aes(Temperature, Stability*30)) + 
   geom_line(color = "red", linetype = 2) + 
   scale_y_continuous("", sec.axis = sec_axis(~ . /30, name = "Proportion enzyme active")) + 
@@ -62,9 +64,13 @@ ggplot(df, aes(Temperature, Stability*30)) +
         axis.title.y.right = element_text(color = "red"))
 ```
 
-Your intuition is probably quietly screaming at you right now, saying, "yeah, but...!" And your intuition is right. This accelerating relationship between the rate of a reaction and temperature cannot go on forever. At some point, everything catches on fire and you get soot rather than a muscle contraction, right? Even before the fires start our reactions run into other temperature limits. Most biochemical reactions involve enzymes and enzymes eventually fall apart or "denature" at warmer temperatures. (The same can happen to some of the chemical reactants, too.) The pattern of enzymes denaturing as temperature is  increased is like [Hemmingway's statement about how you go bankrupt]([https://www.goodreads.com/quotes/102579-how-did-you-go-bankrupt-two-ways-gradually-then-suddenly]): "gradually, then suddenly." Let's add a line to the graph at the right showing the proportion of enzymes that are still active (i.e., have not denatured) as a function of temperature. 
 
-```{r, fig.margin=TRUE, , fig.alt = "Line graph showing the overall rate of an enzymatic reaction, accounting for exponentially increasing rates and decreasing enzyme activity with temperature. It produces a hump with a long tail to the cooler side and a steep drop on the warmer side."}
+```{r}
+#| label: fig-rate-enzdr
+#| column: margin
+#| fig-cap: "Overall rate of enzymatic reaction"
+#| fig-alt: "A combination of @fig-rate-enz and @fig-rate-enzd, with a resulting curve showing the effective rate of an enzymatic reaction. It is a hump with a long tail to the cooler side and a steep drop on the warmer side."
+
 ggplot(df, aes(Temperature, Rate)) + 
   geom_line() + 
   geom_line(aes(y=Reaction), color = "blue", linetype = 2) + 
@@ -72,13 +78,12 @@ ggplot(df, aes(Temperature, Rate)) +
  scale_y_continuous("Rate of enzymatic reaction", 
                     sec.axis = sec_axis(~ . /30, 
                                         name = "Proportion enzyme active")) + 
-  labs(title = "Overall rate of enzymatic reaction") + 
   coord_cartesian(ylim = c(0, max(df$Reaction))) + 
   theme(axis.title.y.left = element_text(color = "blue"), 
         axis.title.y.right = element_text(color = "red")) 
 ```
 
-When we put these two processes together (the blue and red liens) we get an overall rate of the reaction (the black line), with a clear peak. This peak corresponds to the temperatures at which the _overall rate_ for this hypothetical reaction is maximized. Notice how the curve is asymmetric. Why is that? What do you think might the consequences for the reaction if the temperature is a bit too cold or a bit too warm?
+When we put these two processes together (the blue and red lines) we get an overall rate of the reaction (the black line), with a clear peak (@fig-rate-enzdr). This peak corresponds to the temperatures at which the _overall rate_ for this hypothetical reaction is maximized. Notice how the curve is asymmetric. Why is that? What do you think might the consequences for the reaction if the temperature is a bit too cold or a bit too warm?
 
 If we were to measure the **thermal performance curve** for a bunch of different  biochemical reactions in an organism we would see something pretty striking: they would all look pretty similar. Why is that? Consider what would happen if they were all very different. If they were dissimilar one sort of reaction might proceed efficiently, but another would be creeping along. How could an organism function if, say, all of the reactions causing muscle contractions were working just fine, but those for the neuronal signally were not?!  Anyway, the coordination of thermal performance curves means that whole organisms have thermal performance curves, and optima, that stem from, and look like, those of their underlying biochemical reactions^[This is not to say that _everything_ needs to have the same optima. Lizards tend to have different thermal performance curves for running speed, digestion, egg production, etc. The more you learn about their biology the more these distinct temperature profiles make sense.]. Running speed of a lizard? Yes, it has a thermal optimum. A mosquito digesting a bloodmeal? That, too, happens fastest at a particular temperature. 
 
@@ -92,15 +97,24 @@ But this all raises a question: why do organisms have such relatively narrow ran
 
 Temperature-dependent rates and thermal optima also extend to development. Consider the process of going from an egg to a hatchling to a juvenile to an awkward, gangly pubescent teenager equivalent to a mature adult, or similarly a seed to seedling to small plant to mature plant. All of these steps are the result of a series of chemical reactions, chained together, one after another. Because these reactions tend to go faster at warmer temperatures, the time it takes to get to a particular developmental milestone (e.g., hatching or sprouting) tends to be shorter at warmer temperatures^[Yes, this is true only up to a point.]. And while these rates increase more-or-less exponentially over a wide range of temperatures, most organisms do not live, or at least develop, over a terribly wide range of temperatures. Over this narrower range of temperatures we might be forgiven for thinking that the rate is sort of linear. Let's run with this linear relationship between temperature and rates of development. What are the consequences? 
 
-```{r, fig.margin=TRUE, fig.cap="Time to eclosion (hatching) for black legged ticks. From Ogden et al. 2004. Journal of Medical Entomology 41:622-633.", fig.alt = "A graph showing that with increasing temperature above 10C the time to eclosion drops by half, and then half again." }
-knitr::include_graphics("DaysEcolosion.png", dpi=400)
+```{r, fig.margin=TRUE}
+#| label: fig-eclosion
+#| column: margin
+#| fig.cap: "Time to eclosion (hatching) for black legged ticks. From Ogden et al. 2004. Journal of Medical Entomology 41:622-633."
+#| fig.alt: "A graph showing that with increasing temperature above 10C the time to eclosion drops by half, and then half again."
+
+knitr::include_graphics("DaysEcolosion.png", dpi=500)
 ```
 
-First, if we were to raise, say, ticks or mosquitoes from eggs at one of a range of temperatures, we would see that the time to some developmental milestone declines rapidly with increasing temperature at first, but that increasing temperatures lead to small and smaller gains in development time. Indeed, this is a hyperbolic relationship where the time to the milestone is just one over the rate of development, which we just noted increases approximately linearly with temperature. That is, $T = 1/d_t$, where $d_t$ is the development rate at temperature $t$ and $T$ is the time to the milestone. Clear? No? OK, let's try an analogy.
+First, if we were to raise, say, ticks (@fig-eclosion) or mosquitoes from eggs at one of a range of temperatures, we would see that the time to some developmental milestone declines rapidly with increasing temperature at first, but that increasing temperatures lead to small and smaller gains in development time. Indeed, this is a hyperbolic relationship where the time to the milestone is just one over the rate of development, which we just noted increases approximately linearly with temperature. That is, $T = 1/d_t$, where $d_t$ is the development rate at temperature $t$ and $T$ is the time to the milestone. Clear? No? OK, let's try an analogy.
 
 Imagine you are driving to the West Side. Let's say it is a 300 mile journey. You could drive the whole way at 60 miles per hour and it would take 300 miles/60 mph = 5 hours or you could drive at 90 mph and it would take  300 miles/90 mph = 3 hours 20 minutes. I you are a very slow driver moving at 30 mph this trip would take 10 hours! A graph of the time it takes to get to your destination, your milestone if you will, follows the same shape as the development graph, above. 
 
-```{r, fig.margin=TRUE, fig.cap="Time to drive to the West Side as a function of speed.", fig.alt = "A graph that looks similar to the previous graph of eclosion times, but now showing how the time to get to the West Side is cut in half as one double's their speed."}
+```{r}
+#| label: fig-drive
+#| column: margin
+#| fig.cap: "Time to drive to the West Side as a function of speed."
+#| fig.alt: "A graph that looks similar to @fig-eclosion, but now showing how the time to get to the West Side (y-axis) is cut in half as one double's their speed (x-axis)"
 
 df <- tibble(Speed = 10:100, 
              Time = 300/Speed)
